final changes on homepage

--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -53,5 +53,6 @@
 
 ///screen size for mobile mediaqueries
 $mobile-screen:600px;
+$l-tablet-screen:1100px;
 $tablet-screen:900px;
 $x-small-screen:475px;
